# ChangeLog for xfce-base/libxfce4util
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libxfce4util-4.5.93 (14 Jan 2009)

  14 Jan 2009; Christoph Mende <angelos@gentoo.org>
  +libxfce4util-4.5.93.ebuild:
  Xfce-4.6 beta3

  18 Dec 2008; Christoph Mende <angelos@gentoo.org>
  libxfce4util-4.5.92.ebuild, libxfce4util-9999.ebuild:
  Added USE=doc

*libxfce4util-4.5.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +libxfce4util-4.5.92.ebuild:
  Xfce-4.6 Beta 2 bump

  09 Nov 2008; Christoph Mende <angelos@gentoo.org>
  libxfce4util-9999.ebuild:
  Add README.Kiosk to DOCS

  02 Dec 2007; Christoph Mende <angelos@gentoo.org>
  libxfce4util-9999.ebuild:
  Sync dependencies with the main tree

  08 Nov 2007; Christoph Mende <angelos@gentoo.org>
  libxfce4util-9999.ebuild:
  Don't block current modemlights

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
