@@ -3,15 +3,17 @@ Hash: SHA1
 
 DIST libxfce4util-4.5.92.tar.bz2 393765 RMD160 eb77be94dfe26682a8c00ff0b1b65bd1c7472d4b SHA1 333865f93cdadc2523edd53879277e74ab3337f1 SHA256 6549590b0fa5081872dbdedbda7bd0b63b1bb85019b91b23bd615ce423c77d80
 DIST libxfce4util-4.5.93.tar.bz2 373348 RMD160 b50492d76f540ba547dfaf5109976b5fc03cca5b SHA1 3aecb1b829905e9c15c688c7b9b76d80e2146b06 SHA256 0778b7c638c254ced7fc3e7451b53393c28b01b52227e9a146a819b0e2a6a8d1
+DIST libxfce4util-4.5.99.1.tar.bz2 418157 RMD160 ef55bc89b880ff890f64535c133e3573cf177f38 SHA1 bbb23552845f8132bf331559fbfb4afe067c6112 SHA256 c3e7490e95940a7145ef51a51a56edefc5a1e89420c3b7d44bf50ff52fd44b58
 EBUILD libxfce4util-4.5.92.ebuild 540 RMD160 f648a1892e178d5c842cbce984b94c6b7bbce2bd SHA1 4930ec08f2ee901b6e5044204751d8391e09dad8 SHA256 ea330e33fd5388f0c04d1d8050ded5650c59ea85af381afc5abc587bf89efb56
 EBUILD libxfce4util-4.5.93.ebuild 540 RMD160 f648a1892e178d5c842cbce984b94c6b7bbce2bd SHA1 4930ec08f2ee901b6e5044204751d8391e09dad8 SHA256 ea330e33fd5388f0c04d1d8050ded5650c59ea85af381afc5abc587bf89efb56
+EBUILD libxfce4util-4.5.99.1.ebuild 540 RMD160 f648a1892e178d5c842cbce984b94c6b7bbce2bd SHA1 4930ec08f2ee901b6e5044204751d8391e09dad8 SHA256 ea330e33fd5388f0c04d1d8050ded5650c59ea85af381afc5abc587bf89efb56
 EBUILD libxfce4util-9999.ebuild 562 RMD160 4b6bad65af4a46b866d641a818fc40cd2bed5ec3 SHA1 30e4247289933c835c51f26e3993d80f5d9b2b56 SHA256 e776e69e321de20aa1b5e29a7c98b089fa0414d1c09e0bf4d00b0dad4b3db966
-MISC ChangeLog 955 RMD160 a8baa29d56abcbc7fce6921c4b9d0e5155ea1dda SHA1 22bd33533a30bcb48a0c9f3cabb2185b3bec19af SHA256 bad0bc4b92b284cef4ec39cad2affb5ee52fed2185c368fcfd9e0d6a325ab6c1
+MISC ChangeLog 1094 RMD160 2e0aab3f7080ee800fbc778f7d532fa04e4efb65 SHA1 a74c863cc4fdbad09562a80131d6fa8057f23e16 SHA256 1a9866b3911406cef54e373d18def619858cf6586f688191181eb581d594e2d6
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluEYYACgkQKhnDs22gwa+A1wCg3Qzg6WwmtNFGE6tbdv+Lvwy0
-kBoAn0kmU+xFgeTmJXRyrbfvNYD36J9s
-=WOOY
+iEYEARECAAYFAkl9xYcACgkQKhnDs22gwa9cewCfTxNQ8c4Zm77/igd1Fhajyoar
+BLAAnj6hLCRqovhTUZS+czt8I3QpabLk
+=OPAj
 -----END PGP SIGNATURE-----
